--- a/src/Components/Main/Home.scss
+++ b/src/Components/Main/Home.scss
@@ -1,10 +1,11 @@
 $border-bottom:rgb(239, 243, 244);
-.home{
+.main{
     border-left: 1px solid rgb(239, 243, 244);
     border-right: 1px solid rgb(239, 243, 244);
-    width: 42%;
+    width: 40%;
+    margin-left: 25%;
 
-    .home-top{
+    .main-top{
         height: 53px;
         align-items: center;
         display: flex;
@@ -18,23 +19,15 @@ $border-bottom:rgb(239, 243, 244);
         }
     }
 
-    .home-form{
+    .main-form{
         display: flex;
         padding: 8px 16px 0 16px;
         border-bottom: 2px solid $border-bottom;
-        .home-form-avatar{
-            margin-right: 12px;
-            width: 10%;
-            img{
-                width: 48px;
-                height: 48px;
-                border-radius: 50%;
-            }
-        }
+        
 
-        .home-form-input{
+        .main-form-input{
             width: 90%;
-            .home-form__top{
+            .main-form__top{
                 
                 textarea{
                     width: 99%;
@@ -45,12 +38,30 @@ $border-bottom:rgb(239, 243, 244);
                     font-family: inherit;
                     resize:none;
                 }
+                div{
+                    position: relative;
+                    
+                    img{
+                        width: 100%;
+                        border-radius: 16px;
+                    }
+                    .im-cancel{
+                        position: absolute;
+                        left: 5px;
+                        top: 5px;
+                        z-index: 1;
+                        &:hover{
+                            transform: scale(1.2);
+                            cursor: pointer;
+                        }
+                    }
+                }
             }
 
-            .home-form__button{
+            .main-form__button{
                 display: flex;
-
-                .home-form__buttonL{
+                justify-content: space-between;
+                .main-form__buttonL{
                     padding: 15px 0;
                     color: $twitter-color;
                     display: flex;
@@ -62,8 +73,100 @@ $border-bottom:rgb(239, 243, 244);
                             background-color: $border-bottom;
                         }
                     }
+                    .buttonL-file{
+                        position: relative;
+                        input{
+                            width: 100%;
+                            height: 34px;
+                            left: 0;
+                            top: 0;
+                            position: absolute;
+                            opacity: 0;
+                        }
+                    }
+                }
+                .main-form__buttonR{
+                    padding: 15px 0;
+                    button{
+                        border-radius: 20px;
+                        background-color: $twitter-color;
+                    }
+                    .show{
+                        z-index: 0;
+                    }
+                    .hide{
+                        z-index: -1;
+                        opacity: 0.5;
+                    }
+                }
+            }
+        }
+        // 
+        .main-content{
+
+            .main-content-userName{
+                width: max-content;
+                cursor: pointer;
+                span{
+                    margin-right: 5px;
+                }
+                .fw-text{
+                    font-weight: 700;
+                    a{
+                        text-decoration: none;
+                        color: black;
+                    }
+                }
+                &:hover{
+                    a{
+                        text-decoration: underline;
+                    }
+                }
+            }
+            .main-content-text{
+                div{
+                    padding: 12px 0;
+                    img{
+                        width: 100%;
+                        border-radius:16px ;
+                        height: 350px;
+                        object-fit: cover;
+                        padding-bottom: 12px;
+                    }
+                    video{
+                        width: 100%;
+                        border-radius:16px ;
+                    }
+                }
+            }
+            .main-content-button{
+                .main-content__function{
+                    display: flex;
+                    justify-content: space-between;
+                    // padding-bottom: 12px;
+                    border-top: 1px solid black;
+                    div{
+                        display: flex;
+                        justify-content: center;
+                        padding: 5px 0;
+                        border-radius: 10px;
+                        width: 32%;
+                        &:hover{
+                            background-color: rgba(15, 20, 25, 0.1);
+                        }
+                    }
                 }
             }
         }
     }
 }
+
+.main__avatar{
+    margin-right: 12px;
+    img{
+        width: 48px;
+        height: 48px;
+        border-radius: 50%;
+    }
+}
+p{width: 100px;}
