--- a/src/Commons/Right/RightMain.scss
+++ b/src/Commons/Right/RightMain.scss
@@ -67,3 +67,15 @@
     }
     
 }
+// screen 1280px
+@media only screen and (max-width:1280px) {
+    .right{
+        width: 28%;
+    }
+}
+// screen surface Duo 768px
+@media only screen and (max-width:768px) {
+    .right{
+        display: none;
+    }
+}
